# huawei_code_test1

./: README.md  mian.cpp  release_2.0.rar
code/: CMakeCache.txt  Makefile  c_map.cpp  c_map.h  c_map1.cpp  c_robot.cpp  c_robot.h  cmake_install.cmake  data_struct.h  function.h  input.cpp  log.txt  main  main.cpp  make.bat  make_fast.bat  make_fast.sh  mian.cpp  out_put_process.cpp  outlog.txt  output.cpp  output_process.cpp  process_control.cpp  robot_table_control.cpp  value_hash.cpp
code/replay/: 2023-03-15.16.50.28.rep  2023-03-15.17.43.14.rep
code1/code/: CMakeLists.txt  c_map1.cpp  c_map1.h  c_robot.cpp  data_struct.h  function.h  main.cpp  output.cpp  process_control.cpp  value_hash.cpp
definition/: README.MD  data&classdefine.txt  functiondefine.txt
test/maps/: map0000.txt  map0001.txt  map0002.txt  map0003.txt  map0004.txt  map0005.txt  map0006.txt  map0007.txt  map0008.txt  map0009.txt  map0010.txt  map0011.txt  map0012.txt  map0013.txt  map0014.txt  map0015.txt  map0016.txt  map0017.txt  map0018.txt  map0019.txt  map0020.txt  map0021.txt  map0022.txt  map0023.txt  map0024.txt  map0025.txt  map0026.txt  map0027.txt  map0028.txt  map0029.txt  map0030.txt  map0031.txt  map0032.txt  map0033.txt  map0034.txt  map0035.txt  map0036.txt  map0037.txt  map0038.txt  map0039.txt  (+61 more)
